; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_insert_keymap.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_insert_keymap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MTRC_KEYMAP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ht_insert_keymap(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 -1, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @MTRC_KEYMAP, align 4
  %10 = call i8* @get_hash(i32 %8, i32 %9)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @get_si32(i8* %15, i8* %16)
  store i32 %17, i32* %6, align 4
  %18 = icmp ne i32 %17, -1
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %3, align 4
  br label %25

21:                                               ; preds = %14
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @ins_si32_ai(i8* %22, i8* %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %21, %19, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i8* @get_hash(i32, i32) #1

declare dso_local i32 @get_si32(i8*, i8*) #1

declare dso_local i32 @ins_si32_ai(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
